# URO_Ex

./: .gitignore  Readme.md
ex1/: main.py  playground.py
ex2/: ex.py  ex_po.py
ex3/: bikes.csv  ex.py  main.py
ex4/: mainwindow.cpp  mainwindow.h
ex5/: bike.h  ex5.pro  mainwindow.cpp  mainwindow.h
ex6/: bike.cpp  bikecard.cpp  bikecard.h  ex6.pro  homewidget.cpp  homewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  storewidget.cpp  storewidget.h
ratatui_ex/: Cargo.toml  README.md
ratatui_ex/songs/: Janji - Heroes Tonight feat Johnning  Progressive House  NCS - Copyright Free Music.m4a
ratatui_ex/src/: app.rs  audio.rs  downloader.rs  lib.rs  main.rs  ui.rs
