[package]
name = "ratatui_ex"
version = "0.1.0"
edition = "2024"

[dependencies]
flexi_logger = "0.29"
log = "0.4"
ratatui = { version= "0.29.0", features = ["serde"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
rand = "0.9.2"
tokio = "1.49.0"


